fix: add overflow for code-examples

--- a/styles/style.css
+++ b/styles/style.css
@@ -176,6 +176,7 @@ time {
 }
 
 .code-examples .code {
+  overflow: auto;
   padding: 10px 30px;
   color: #67ecbc;
   background-color: rgb(54, 54, 54);
